docs: add @varmakarthik12 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "varmakarthik12",
+      "name": "Karthik Sundari",
+      "avatar_url": "https://avatars.githubusercontent.com/u/17958166?v=4",
+      "profile": "https://github.com/varmakarthik12",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
