--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -27,6 +27,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "Avihuc",
+      "name": "Avihuc",
+      "avatar_url": "https://avatars.githubusercontent.com/u/32455410?v=4",
+      "profile": "https://github.com/Avihuc",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
