--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -36,6 +36,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "claranceliberi",
+      "name": "Clarance Liberiste Ntwari",
+      "avatar_url": "https://avatars.githubusercontent.com/u/60586899?v=4",
+      "profile": "https://www.claranceliberi.me/",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
