--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -31,6 +31,7 @@ jobs:
           reporter: github-pr-review
           level: warning
           locale: "US"
+          exclude: ./doc/*
 
   actionlint:
     runs-on: ubuntu-latest
